PAG-319 Fault bean Pagamento sconosciuto

--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "clean": "npm-run-all -s clean:*",
     "clean:dist": "rimraf dist",
     "clean:yaml-files": "rimraf src/generated/yaml-file/*.yaml",
-    "clean:ts-from-yaml": "rimraf src/generated/FespCdService && rimraf src/generated/PagamentiTelematiciPspNodoservice",
+    "clean:ts-from-yaml": "rimraf src/generated/paForNode_Service",
     "clean:proxy-api-models": "rimraf generated/api",
     "postversion": "git push && git push --tags",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "tslint --project .",
     "generate": "npm-run-all -s generate:yaml-from-wsdl generate:ts-from-yaml:*",
-    "generate:ts-from-yaml:FespCdService": "shx mkdir -p src/generated/FespCdService && rimraf src/generated/FespCdService/* && gen-api-models --strict 0 --api-spec src/generated/yaml-file/FespCdService.yaml --out-dir src/generated/FespCdService",
-    "generate:ts-from-yaml:PPTPort": "shx mkdir -p src/generated/PagamentiTelematiciPspNodoservice && rimraf src/generated/PagamentiTelematiciPspNodoservice/* && gen-api-models --strict 0 --api-spec src/generated/yaml-file/PagamentiTelematiciPspNodoservice.yaml --out-dir src/generated/PagamentiTelematiciPspNodoservice",
     "generate:ts-from-yaml:paForNode": "shx mkdir -p src/generated/paForNode_Service && rimraf src/generated/paForNode_Service/* && gen-api-models --strict 0 --api-spec src/generated/yaml-file/paForNode_Service.yaml --out-dir src/generated/paForNode_Service",
     "generate:yaml-from-wsdl": "shx mkdir -p src/generated/yaml-file && rimraf generated/yaml-file/* && node generator/yamlGenerator.js"
   },
