--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postversion": "git push && git push --tags",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "tslint --project .",
+    "lint": "eslint . -c .eslintrc.js --ext .ts,.tsx",
+    "lint-autofix": "eslint . -c .eslintrc.js --ext .ts,.tsx --fix",
     "generate": "npm-run-all -s generate:yaml-from-wsdl generate:ts-from-yaml:*",
     "generate:ts-from-yaml:paForNode": "shx mkdir -p src/generated/paForNode_Service && rimraf src/generated/paForNode_Service/* && gen-api-models --strict 0 --api-spec src/generated/yaml-file/paForNode_Service.yaml --out-dir src/generated/paForNode_Service",
     "generate:yaml-from-wsdl": "shx mkdir -p src/generated/yaml-file && rimraf generated/yaml-file/* && node generator/yamlGenerator.js"
@@ -32,9 +33,14 @@
     "@types/morgan": "^1.9.0",
     "@types/node": "12.19.1",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "apiconnect-wsdl": "^1.6.3",
     "danger": "^8.0.0",
     "danger-plugin-digitalcitizenship": "*",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-functional": "^3.2.1",
+    "eslint-plugin-sonarjs": "^0.7.0",
     "italia-tslint-rules": "*",
     "italia-utils": "^4.0.1",
     "jest": "^24.8.0",
@@ -49,7 +55,10 @@
     "wait-for-expect": "^3.0.2"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^4.24.0",
     "dotenv": "^9.0.2",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-react": "^7.23.2",
     "express": "^4.17.1",
     "express-xml-bodyparser": "^0.3.0",
     "fp-ts": "1.12.0",
