--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "@types/node": "12.19.1",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.8.2",
     "apiconnect-wsdl": "^1.6.3",
     "danger": "^8.0.0",
     "danger-plugin-digitalcitizenship": "*",
-    "eslint": "^7.27.0",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-functional": "^3.2.1",
-    "eslint-plugin-sonarjs": "^0.7.0",
+    "eslint-plugin-functional": "^3.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "italia-tslint-rules": "*",
     "italia-utils": "^4.0.1",
     "jest": "^24.8.0",
