--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
+    "target": "ES5",
     "module": "commonjs",
-    "target": "es2017",
-    "sourceMap": false,
-    "declaration": false,
-    "outDir": "dist",
-    "rootDir": "src",
-    "noImplicitAny": true,
-    "noFallthroughCasesInSwitch": true,
+    "lib": ["ES6", "DOM"],
+
+    "allowJs": false,
+    "jsx": "react",
+    "noEmit": true,
+    "importHelpers": true,
+    "isolatedModules": true,
+
+    "strict": true,
+    "noImplicitAny": false,
+    "strictFunctionTypes": true,
+
     "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "preserveConstEnums": true,
+
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "allowUmdGlobalAccess": true,
+    "resolveJsonModule": true,
+
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*.ts"
-  ]
+  "exclude": ["node_modules"]
 }
